# invasion-block-card-recognizer

./: .gitignore  Makefile  README.md  pyproject.toml
data/: card_metadata.json
data/embeddings/: card_metadata.json  invasion_block.index
postman/: mtg-invasion-recognizer.dev.postman_environment.json  mtg-invasion-recognizer.local.postman_environment.json  mtg-invasion-recognizer.postman_collection.json  mtg-invasion-recognizer.prod.postman_environment.json
src/api/: main.py  schemas.py
src/dataset/: README.md  augmentor.py  compositor.py  downloader.py
src/recognizer/: README.md  build_index.py  detector.py  embedder.py  index_builder.py  recognizer.py
src/ui/: app.py
tests/: test_detector.py  test_recognizer_augmented.py  test_recognizer_augmented_no_detector.py  test_recognizer_composite.py  test_recognizer_composite_no_detector.py  test_recognizer_reference.py  test_recognizer_reference_no_detector.py
wiki/: 00-overview.md  01-project-overview.md  02-system-architecture.md  03-api-specification.md  04-user-interface.md  05-data-management.md  06-technology-stack.md  07-deployment-on-railway.md  08-performance-requirements.md  09-testing-strategy.md  10-future-enhancements-phase-2.md  11-risk-assessment.md  12-references-and-resources.md  13-appendix.md  14-document-control.md  15-references.md  _Home.md  _Sidebar.md
